--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+      <a class="navbar-brand js-scroll" href="#page-top">Anits</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -77,7 +77,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Chellingi Sathya Venkata Sai</h1>
+          <h1 class="intro-title mb-4">I am Sathya</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Front End Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -101,7 +101,7 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Sathya Venkata Sai</span></p>
+                      <p><span class="title-s">Name: </span> <span>Chellingi Sathya Venkata Sai</span></p>
                       <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
                       <p><span class="title-s">Email: </span> <span>sathyavenkatasai143@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
